--- a/actividades/ej_03/index.html
+++ b/actividades/ej_03/index.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad #</title>
+    <title>Actividad #3</title>
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1>Actividad #</h1>
+        <h1>Actividad #3</h1>
     </header>
+        <div id="mostrartemp">
+            Temperatura: <span id="mostrar-temperatura"></span> °C
+        </div>
+
+        <label for="setpoint-slider">Setpoint:</label>
+        <input type="range" id="setpoint-slider" min="0" max="100" value="100" oninput="updateSetpointValue(this.value)">
+        <span id="setpoint-value"></span> °C
+        
+        <div id="estado-buzzer">
+            Buzzer: <span id="estado-buzzer"></span>
+        </div>
+    </div>
     <main>
     </main>
     <footer>
         <p>Representación Frontal y Visual de Datos</p>
         <p>Computadoras de Aeronaves</p>
-        <p>Alumno XX</p>
+        <p>Alumno Tiago Quattrocchi</p>
         <p>Prof. Carlassara Fabrizio</p>
         <p id="fecha"></p>
     </footer>
     <script src="scripts/base.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
